--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.17.0",
-    "tailwind-merge": "^3.3.1"
+    "slugify": "^1.6.6",
+    "tailwind-merge": "^3.3.1",
+    "youtubei.js": "^15.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
