--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.4",
     "@langchain/community": "^0.3.53",
     "@langchain/core": "^0.3.72",
     "@langchain/google-genai": "^0.2.16",
     "@langchain/openai": "^0.6.9",
     "@langchain/qdrant": "^0.1.3",
     "@langchain/textsplitters": "^0.1.0",
+    "@qdrant/js-client-rest": "^1.15.1",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
@@ -22,22 +26,27 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-to-text": "^9.0.5",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
-    "openai": "^5.12.2",
+    "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.17.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
-    "youtubei.js": "^15.0.1"
+    "youtubei.js": "^15.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
