--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@qdrant/js-client-rest": "^1.15.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "axios": "^1.11.0",
     "better-auth": "^1.3.23",
     "cheerio": "^1.1.2",
