--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.22",
+    "@ai-sdk/react": "^2.0.68",
     "@langchain/community": "^0.3.53",
     "@langchain/core": "^0.3.72",
     "@langchain/google-genai": "^0.2.16",
@@ -22,20 +24,31 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.90.2",
+    "@xyflow/react": "^12.8.6",
+    "ai": "^5.0.68",
     "axios": "^1.11.0",
     "better-auth": "^1.3.23",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "html-to-text": "^9.0.5",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.540.0",
+    "nanoid": "^5.1.6",
     "next": "15.4.7",
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
@@ -46,10 +59,14 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-spinners": "^0.17.0",
+    "react-syntax-highlighter": "^15.6.6",
     "slugify": "^1.6.6",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "youtubei.js": "^15.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -57,6 +74,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "prisma": "^6.16.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
